fix footer items spacing and srticle items spacing. Adjusted border lines for section, header and article

--- a/index-styles.css
+++ b/index-styles.css
@@ -21,47 +21,55 @@ body {
 }
 
 header, .copyright {
-    background-color:;
     height: 2.5em;
     display: flex;
     align-items: center;
     justify-content: space-between;
     font-size: 1em;
+    
 }
 
 a {
-    padding: 0.2rem;
     text-decoration: none;
     color: #1b998b;
+    padding: 0 0.3em;
 }
 
 section {
-    height: 50rem;
+    height: 60rem;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     position: relative;
-    margin: 0rem 1rem;
+    padding: 0rem 1rem 0rem 1rem;
     background-color: white;
+    border-top: solid 0.2em rgb(209, 209, 209);
 }
+
 .welcome {
     position: absolute;
     top: 0.2rem;
     left: 0.2rem;
-    padding: 2rem 0.5rem;
+    padding: 2rem 1.5rem;
     color: #f9dc5c;
     font: bold 3em Roboto, arial, helvetica;
     text-shadow: 2rem;
-    
+    transition: 0.3s;
 }
+
+.welcome:hover {
+    color: white;
+}
+
 .box1 {
     display: flex;
 }
 footer {
     display: flex;
     justify-content: space-between;
-    margin: 0 1rem;
-    font: bold 20px Roboto, arial, helvetica;
+    align-items: center;
+    padding: 1rem 1rem;
+    background-color: rgb(160, 160, 160);
 }
 
 li {
@@ -70,8 +78,6 @@ li {
 
 .copyright {
     font-size: 0.6em;
-    padding: 0 0rem;
-    color: #403f4c
 }
 .thanks {
     font-size: 1em;
@@ -87,10 +93,23 @@ li {
     height: 10.7rem;
 }
 
-.welcome:hover {
-    color: white;
-}
-
 .hello {
     position: absolute;
+}
+
+
+article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 0.7em;
+    height: 3rem;
+    padding: 0 0 1rem 0;
+}
+
+.contact {
+    display: inline-flex;
+    font: bold 0.8em;
+    padding-bottom: 1.5em;
 }
